--- a/src/components/wordlist.css
+++ b/src/components/wordlist.css
@@ -1,21 +1,25 @@
 .search-bar {
-  position: sticky;
-  top: 0;
-  z-index: 2;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 
-  padding: 0.8rem 1.6rem;
-  background-color: white;
-  border-bottom: 1px solid #ccc;
+    padding: 0.8rem 1.6rem;
+    background-color: white;
+    border-bottom: 1px solid #ccc;
 
-  input {
-    padding: 0.2rem;
-  }
+    input {
+        padding: 0.2rem;
+    }
+
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 1rem;
 }
 
 .word-list {
-  list-style: none;
+    list-style: none;
 
-  li {
-    margin: 0.2rem 0;
-  }
+    li {
+        margin: 0.2rem 0;
+    }
 }
